--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   </head>
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="fr.jpg" width="450" height="350" alt="Audi">
 
-    <p>At Mozilla, we’re a global community of</p>
+    <p>You ask us why? Because everything is integral part of the Audi: </p>
 
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
+      <li>manufacturability</li>
+      <li>hight perfomance</li>
+      <li>reliability</li>
+      <li>comfort</li>
     </ul>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <center><h2><p>Audi. High Tech Excellence</p></h2>>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>Read the <a href="https://ru.wikipedia.org/wiki/Audi_RS6">Audi RS6</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user</button>
     <script src="main.js"></script>
   </body>
